--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
             "SHOW_ADS": false
         },
         "ko": {
-            "AD_SERVER": null,
-            "SHOW_ADS": false
+            "AD_SERVER": "http://www.quizland.kr/api/ads/",
+            "SHOW_ADS": true
         }
     }
 }
