--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "global": {
+        "API:CLIENT_ID": "kd1unb4b3q4t58fwlpcbzcbnm76a8fp",
         "SEARCH_HELPER:CHANNEL_ID_EXAMPLES": [
             ["channel", "twitch"],
             ["channel", "devhotteok"]
