--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "global": {
         "API:CLIENT_ID": "kd1unb4b3q4t58fwlpcbzcbnm76a8fp",
+        "PLAYBACK:GQL_CLIENT_ID": "kd1unb4b3q4t58fwlpcbzcbnm76a8fp",
         "SEARCH_HELPER:CHANNEL_ID_EXAMPLES": [
             ["channel", "twitch"],
             ["channel", "devhotteok"]
