--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
         },
         "ko": {
             "CONTACT": {},
-            "PARTNER_CONTENT:ENABLED": false,
+            "PARTNER_CONTENT:ENABLED": true,
             "PARTNER_CONTENT:SERVER": "https://www.quizland.kr/api/ads/adfit/",
             "PARTNER_CONTENT:URL_QUERY": "width={width}&height={height}",
             "PARTNER_CONTENT:IN_FEED_FREQUENCY": 6
