--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "global": {
+        "USER_AGENT_FORMAT": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36",
         "SEARCH_HELPER:CHANNEL_ID_EXAMPLES": [
             ["channel", "twitch"],
             ["channel", "devhotteok"]
@@ -25,6 +26,8 @@
     },
     "local": {
         "en": {},
-        "ko": {}
+        "ko": {
+            "CONTACT": {},
+        }
     }
 }
