--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "global": {
+        "USER_AGENT_TEMPLATE": "Mozilla/5.0 ({systemInfo}) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
         "USER_AGENT_FORMAT": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36",
         "SEARCH_HELPER:CHANNEL_ID_EXAMPLES": [
             ["channel", "twitch"],
